--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser-dynamic": "^19.1.0",
     "@angular/router": "^19.1.0",
     "@srexi/purecounterjs": "^1.5.0",
+    "device-detector-js": "^3.0.3",
     "glightbox": "^3.3.1",
     "isotope-layout": "^3.0.6",
     "rxjs": "~7.8.0",
@@ -27,6 +28,7 @@
     "swiper": "^12.0.3",
     "swirl": "^3.0.0",
     "tslib": "^2.3.0",
+    "uuid": "^13.0.0",
     "zone.js": "~0.15.0"
   },
   "devDependencies": {
